[package]
name = "bevy-bullet-hell"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs_tilemap = { version = "0.14.0", features = [
    "render",
    "atlas",
    "serde",
] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_error",
] }
avian2d = "0.1.2"
rand = "0.8.5"
bevy = { version = "0.14.2", features = [
    "dynamic_linking",
    "bevy_dev_tools",
    "wayland",
] }
bevy-inspector-egui = "0.27.0"
bevy_egui = "0.30.0"
bevy_framepace = "0.17.1"
ron = "0.8.1"
serde = { version = "1.0.211", features = ["derive"] }
rfd = "0.15.0"


[target.'cfg(windows)'.dependencies]
multiinput = "0.1.0"
heapless = { version = "0.8.0", features = ["mpmc_large"] }

[target.'cfg(not(windows))'.dependencies]


nonblock = "0.2.0"
# input-linux-tools = { git = "https://github.com/perlindgren/input-linux-tools.git" }

input-linux-tools = { path = "../input-linux-tools" }
# bevy = { version = "0.14.2" }
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
